完成 MyStudentService.passedPrerequisitesForCourse() 和一部分 MyStudentService.enrollCourse()

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
