--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 serviceFactory=implement.MyFactory
 jdbcUrl=jdbc:postgresql://127.0.0.1:5432/project2
-username=wlq
-password=wlqyanyalun008
+username=
+password=
