--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>groupId</groupId>
     <artifactId>SUSTech-SQL-Project2</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>old</module>
+    </modules>
 
     <properties>
         <java-version>11</java-version>
